# sheesh-rs

./: .env.example  .gitignore  .todo.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/finish-worktree/: SKILL.md
.claude/skills/ship-release/: SKILL.md
.github/workflows/: ci.yml  release.yml  tag-release.yml
crates/sheesh-mcp/: Cargo.toml
crates/sheesh-mcp/src/: context.rs  lib.rs  registry.rs  tool.rs  types.rs
crates/sheesh-mcp/src/tools/: mod.rs  run_command.rs
crates/sheesh-tools/: Cargo.toml
crates/sheesh-tools/src/: lib.rs
docs/: ideas.md
src/: app.rs  config.rs  event.rs  logs.rs  main.rs  ssh.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/tabs/: listing.rs  llm.rs  mod.rs  terminal.rs
src/ui/: keybindings.rs  theme.rs
