[package]
name = "sheesh-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
crossterm = "0.29.0"
ftail = "0.3.1"
log = "0.4.29"
ratatui = "0.30.0"
ratatui-widgets = "0.3.0"

anyhow = "1"
arboard = "3"
dirs = "5"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
